--- a/Index.html
+++ b/Index.html
@@ -59,7 +59,7 @@
 			</div>
 		</div>
 		<!-- Скрипты -->
-		<script src="joke.js"></script>
+		<script src="Joke.js"></script>
 		<script src="main.js"></script>
 	</body>
 </html>
